<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="walkthroughNavigator"
            type="com.watchback2.android.navigators.IWalkthroughNavigator" />

        <variable
            name="settingsContainerNavigator"
            type="com.watchback2.android.navigators.ISettingsContainerNavigator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:singleLine="true"
            android:text="@string/movie_tickets"
            android:textAppearance="@style/TextAppearance_BrandonMedium"
            android:textSize="20sp"
            style="@style/WideLetterSpacing_0_01"
            android:lineSpacingExtra="1.9sp"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:visibility="gone"
            android:onClick="@{settingsContainerNavigator::handleSettingsClick}"
            app:srcCompat="@drawable/ic_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/id_title"
            app:layout_constraintBottom_toBottomOf="@+id/id_title"/>

        <View
            android:id="@+id/id_seperator_top"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/ash"
            app:layout_constraintTop_toBottomOf="@+id/id_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="?attr/popupBackground"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_seperator_top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/unregistered_text_1"
                android:textAppearance="@style/TextAppearance_BrandonMedium"
                android:textSize="13sp"
                tools:text="@string/unregistered_text_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="19dp"
                android:gravity="center"
                android:text="@string/unregestered_text_2"
                android:textAppearance="@style/TextAppearance_BrandonMedium"
                android:textSize="13sp"
                tools:text="@string/unregestered_text_2" />

            <Button
                android:id="@+id/id_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/rounded_bg"
                app:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/log_in"
                android:gravity="center"
                android:onClick="@{() -> walkthroughNavigator.handleSignUpClick()}"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance_BrandonBold"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/sign_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="27dp"
                android:alpha=".5"
                android:gravity="center"
                android:text="@string/login_intro"
                android:textAppearance="@style/TextAppearance_BrandonMedium"
                android:textSize="13sp"
                tools:text="@string/login_intro" />

            <TextView
                android:id="@+id/id_tv_login"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:onClick="@{() -> walkthroughNavigator.handleLogInClick()}"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance_BrandonBold"
                android:textSize="16sp"

                tools:text="@string/log_in" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tnc"
                android:textAppearance="@style/TextAppearance_BrandonMedium"
                android:textSize="13sp"
                tools:text="@string/tnc" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>