<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.watchback2.android.viewmodels.TermsGateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:onClick="@{viewModel::handleBackClick}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_btn"
            app:tint="?android:attr/textColor"
            android:contentDescription="@null" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/before_you_continue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance_BrandonMedium"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="6dp"
            tools:fontFamily="@font/brandon_medium"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_dob_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="39dp"
            android:paddingRight="39dp"
            android:lineSpacingExtra="8.6sp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/id_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:fontFamily="@font/sf_pro_text_regular"
            app:htmlTextUnderlined="@{@string/usage_terms_message_unregistered}"
            tools:text="@string/usage_terms_message_unregistered"
            tools:fontFamily="@font/sf_pro_text_regular"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/i_agree"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance_BrandonBold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:onClick="@{viewModel::handleContinueClick}"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_dob_title"
            tools:backgroundTint="@color/colorAccent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:textSize="12.5sp"
            android:onClick="@{viewModel::handleLoginClick}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:fontFamily="@font/sf_pro_text_regular"
            app:htmlText="@{@string/account_existing_msg}"
            tools:text="@string/account_existing_msg"
            tools:fontFamily="@font/sf_pro_text_regular"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>